--- a/public/admin.html
+++ b/public/admin.html
@@ -46,6 +46,11 @@
 
   <!-- Painel -->
   <div id="dashboard" class="hidden max-w-5xl mx-auto mt-10">
+    <div class="flex items-center gap-2 mb-4">
+      <input type="checkbox" id="auto-approve-toggle" class="w-4 h-4" />
+      <label for="auto-approve-toggle" class="text-sm text-white">Aprovar automaticamente</label>
+    </div>
+    
     <h2 class="text-3xl font-bold mb-6">📥 Mensagens Pendentes</h2>
     <div id="pending-container" class="grid md:grid-cols-2 gap-6"></div>
 
